[package]
name = "brotherget-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bget"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
error-chain = "0.12.4"
futures = "0.3.18"
indicatif = "0.17.0-rc.10"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"